Fix Swagger for route tmdb movies by genre and dates + new build
